Findbugs: more efficient to use valueOf
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/collections/trunk@1300033 13f79535-47bb-0310-9956-ffa450edef68